Improves SVG icon integration and adds wp_head cleanup
Enhances SVG icon usage by unifying prop naming, updating default sizes, and improving accessibility. Adds cleanup functions to remove unnecessary elements from wp_head, promoting better performance and markup hygiene. Updates documentation to reflect caching of SVG assets and new SCSS variable usage.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -22,6 +22,7 @@
 @use 'components/forms';
 @use 'components/a11y';
 @use 'components/buttons';
+@use 'components/svgIcon';
 
 // 5) Blocks
 @use 'blocks/core-blocks';
