Enhances offline capabilities, integrates Gravity Forms assets, and improves link interception for React Router navigation

--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -4,9 +4,12 @@
 
 @use '../abstracts/breakpoints' as bp;
 
+// Menu active item styles
+.menu-item.is-active > a {
+    text-decoration: none;
+}
+
 // Primary menu styles
-
-
 .primary-menu {
     display: flex;
     list-style: none;
